# NCNN_yolov5_lite

./: CMakeLists.txt  README.md  yolov5_lite_e.cpp
ncnn/include/ncnn/: platform.h
ncnn/lib/pkgconfig/: ncnn.pc
